--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "oftac_lp",
   "version": "0.1.0",
+  "homepage": "http://oftac.com.ng",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
